    mips/mips32/libgcc-compat.c as it is only needed for the o32 ABI, and not
    needed for n32 and n64 ABIs.
  * Add sparc/local-fork.diff (use fork.c instead of fork.S).
  * Add any/local-__thread.diff (make glibc buildable without __thread support)
    from Michael Banck.
  * debian/script.in/kernelcheck.sh: set the minimum kernel version to 2.6.0,
    except on m68k where it is set to 2.4.1.

  [ Jeff Bailey ]

  * debian/control.in/libc: Move tzdata dependancy to ...
  * debian/sysdeps/depflags.mk: ... here.

  * debian/sysdeps/powerpc.mk: Include biarch headers in libc6-dev-ppc64

  * debian/patches/any/local-dynamic-resolvconf.diff: New file to 
    check for updated resolv.conf before a nameserver call.  (Closes:
    #272265).
  * debian/patches/series: Use it.

 -- Clint Adams <schizo@debian.org>  Sun, 28 May 2006 03:28:14 +0200

glibc (2.3.6.ds1-5) UNRELEASED; urgency=low

  * debian/local/manpages/ldconfig.8: Update the description. Closes: #325921.
  * rules.d/debhelper.mk: don't make ld.so.8.gz or ld.so.conf executable.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 24 Aug 2006 21:04:20 +0200

glibc (2.3.6.ds1-4) unstable; urgency=low

  * debian/control.in/opt: add a new line at the end of the file.  (Closes:
    #384375). 
  * debian/rules.d/control.mk: add a check to make sur that all files in
    debian/control.in have a new line at the end.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 24 Aug 2006 00:21:25 +0200

glibc (2.3.6.ds1-3) unstable; urgency=low

  * patches/any/cvs-sysctl.diff: patch from upstream to fix the sysctl()
    problem for NPTL.
  * patches/any/local-sysctl.diff: remove the NPTL fix from this patch, apply
    the same kind of fix for linuxthreads than for NPTL.  (Closes: #383976).
  * patches/any/local-sysctl.diff: fix for arm.
  * patches/any/local-bashisms.diff: fix bashisms in the testsuite.
  * debian/control.in/{i386,powerpc,ppc64,s390x,sparc64}: change the bi-arch